# microservices

./: .gitignore  Cargo.toml  Dockerfile  README.md  credentials.json  docker-compose-local.yaml  docker-compose.yaml  example.env  run.bash  sonar-project.properties
.github/: dependabot.yaml
.github/workflows/: account.yaml  build_account.yaml  deploy_account.yaml  development.yaml  feature.yaml  lint.yaml  test.yaml
kubernetes/controller/: gateway_api.yaml
kubernetes/deployment_service/: account.yaml  session_database.yaml
kubernetes/secret/: account_secret.yaml  database_secret.yaml  example_account_secret.yaml  example_game_catalog_secret.yaml
src/: auth.rs  db.rs  header.rs  lib.rs  signals.rs  template.rs  utils.rs
src/account/: Dockerfile  email.rs  email_verification.rs  fixture.rs  main.rs  model.rs  user.rs
src/account/balance/: db.rs  model.rs
src/account/email/: db.rs  model.rs  request.rs
src/account/email_verification/: db.rs  request.rs
src/account/migrations/: V1__initial.rs
src/account/user/: db.rs  model.rs  request.rs
src/auth/: db.rs  model.rs  request.rs
src/authentication/: main.rs
src/default/: main.rs
src/game_catalog/: catalog.rs  main.rs
src/payment/: main.rs
src/template/: catalog.rs  snackbar.rs  user.rs
src/utils/: db.rs  env_handler.rs  extract.rs
templates/: balance.html  catalog.html  snackbar.html  user_information.html
templates/user_information/: account_details.html  address_input.html  input.html  name_input.html
