[package]
name = "leprecon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "account"
path = "src/account/main.rs"

[[bin]]
name = "authentication"
path = "src/authentication/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

