[package]
name = "leprecon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "default"
path = "src/default/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] } # !TODO change full to only the used features.
axum = "0.7.4"
tower = "0.4.13"
askama = "0.12.1"
serde = { version = "1.0.197", features = ["derive"] }



